--- a/LaTeX/Rapport - NIX PILLE/indhold/problem/method.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/problem/method.tex
@@ -1,14 +1,14 @@
 \section{Method}
-This project's structure will be based on Aalborg PBL (problem based learning). The Aalborg PBL is a method whereby the learning process lies in the working with a problem and trying to develop a solution for the given problem.
-The Aalborg PBL method also trains the students ability to work together in a project group and gives them tools to handle the processes that goes with working in a group.
+The structure of this project will be based on Aalborg PBL (problem based learning). The Aalborg PBL is a method whereby the learning process lies in investigating a problem and trying to develop a solution for the given problem.
+The Aalborg PBL method also trains the students' ability to work together in a project group and gives them tools to handle the processes which go with working in a group.
 
 The first stage of the project is the problem analysis in chapter \ref{chap:problem}, which purpose is to find and document that there is a problem to begin with. From the problem analysis a problem statement is formed and is used to produce a list of product requirements.
-The requirements are then used to design and develop a product that should solve the problem stated in the problem statement. The design will be describe in chapter \ref{chap:design}.
-The development will also have its own chapter were the program will be describe and how the different functions are made. This can be seen in chapter \ref{chap:development}.
+The requirements are then used to designing and developing a product that should solve the problem stated in the problem statement. The design will be described in chapter \ref{chap:design}.
+The development will also have its own chapter where the program and how the different functions are made will be described. This can be seen in chapter \ref{chap:development}.
 
-The program are then tested on the target group of the problem. The testing phase will be described in chapter \ref{chap:testing}. The result of the testing will lead to improvements and a conclusion of the project. The conclusion will sum up the project and try to answer the problem statement. The conclusion can be seen in chapter \ref{chap:conclusion}. This is the main course of the project, when using the Aalborg PBL model.
-This project form is used because it finds and documents a problem and then through the work with the problem gives an estimated solution to the problem.
+The testing phase will be described in chapter \ref{chap:testing}. The result of the testing will lead to improvements and a conclusion of the project. The conclusion will sum up the project and try to answer the problem statement. The conclusion can be seen in chapter \ref{chap:conclusion}. This is the main course of the project, when using the Aalborg PBL model.
+This project form is used because it finds and documents a problem and then, through the work with the problem, gives an estimated solution to the problem.
 
-To document the problem, a lot of information is needed. The information is found through different sources such as; books, articles, websites, etc. When using information found through the internet or other sources it is important to evaluate the used sources.
+To document the problem, a lot of information is needed. The information is found through different sources such as; books, articles, websites, etc. When using information found through the Internet or other sources it is important to evaluate the used sources.
 This is done to filter out unreliable sources and thereby achieve a better and more trustworthy project.
-This process of evaluation is also known as source criticism and are general used when using others materials as documentation. Therefore it is also a relevant method to use when using sources in the project work.
+This process of evaluation is also known as source criticism and is generally used when using other peoples materials as documentation. Therefore, it is also a relevant method when using sources in the project work.
