--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
@@ -1,31 +1,31 @@
-\section{Problem with Packing a Suitcase}
+\section{Problems with Packing a Suitcase}
 In the modern society, families or groups of friends tend to go on vacation to other countries to relax and enjoy their vacation \citep{danskecharter}.
 
-When going on a vacation or a business trip packing a suitcase is normally needed. The passenger needs all their personal items and clothes with them. The length of the stay, the purpose of the trip, and the number of people traveling together effects the weight and size of the needed luggage. This can be a problem due to the different rules or limits to your luggage when using different means of transportation.
+When going on a vacation or a business trip packing a suitcase is normally needed. The passengers need all their personal items and clothes with them. The length of the stay, the purpose of the trip, and the number of people traveling together affects the weight and size of the needed luggage. This can be a problem due to the different rules or limits to your luggage when using different means of transportation.
 
 %The time spent away affects how much clothes the traveler will need to bring and/or if the traveler will need to wash the clothes while away. A longer stay means of course that the traveler will need more clothes. This affects the size and weight of the luggage because you will need more or fewer items with you on different trips.\\
  
 %The amount of items to bring also depends on what kind of trip it is and the purpose of the trip. For example if the purpose of the trip is a sport competition, you might need to bring some equipment, you would not normally bring on a holiday trip or other kind of trips. If it is a short business trip all you might need could be a briefcase with your papers and a suit to wear.\\
 
-The amount of luggage depends on the amount of people on the trip, because everyone needs their own personal items, and their own clothes. This can be a problem if the persons have a lot of shared items that has to be spread in different suitcases and need to be found afterwards and it might also effect the total weight of the luggage.
+The amount of luggage depends on the amount of people on the trip, because everyone needs their own personal items, and their own clothes. This can be a problem if the persons have a lot of shared items which have to be spread in different suitcases and need to be found afterwards and it might also affect the total weight of the luggage.
 
 %It can be frustrating, when traveling with many and/or heavy suitcases, if you need to carry the luggage far. It can also be hard to maneuvre if where you are suppose to walk is a small space or a narrow passage or if simply filled with a lot of people constantly blocking your way.\\
  
 There can also be a problem with too large or too heavy suitcases if you are traveling by plane since this can result in a fee. The size of the fee varies from airline to airline and can be found on the airlines website e.g.  \citep{altombag}. 
 %One of the reasons that this fee has been introduced is so the airlines bag-handlers do not risk getting injuries by carrying too many, heavy suitcases.
 
-To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items to bring so the total weight does not exceed the allowed weight.
+To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items so the total weight does not exceed the allowed weight.
 
 \subsection{Packing}
 \label{sec:packingproblem}
-Because of the weight and size restrictions when traveling by plane it can sometimes be difficult to get all the items you want to bring, into a suitcase that is small enough and still does not exceeds the allowed weight. It can sometimes even be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
+Because of the weight and size restrictions when traveling by plane it can sometimes be difficult to get all the items you want to bring, into a suitcase that is small enough and still does not exceed the allowed weight. It can sometimes even be necessary to acquire more suitcases for the trip or leaving some of the items you wanted to bring. 
 
-Bringing more luggage means the passenger have to pay more to get the extra luggage on the plane \citep{altombag}. A way they might be able to avoid buying and paying for extra suitcases is to pack the suitcases more that you normally would. This on the other hand increases the suitcases weight. This should be thought through because too much weight can be unhealthy to carry around.
+Bringing more luggage means the passenger has to pay more to get the extra luggage on the plane \citep{altombag}. A way they might be able to avoid buying and paying for extra suitcases is to pack the suitcases more that you normally would. This, on the other hand, increases the suitcase's weight. This should be thought through because too much weight can be unhealthy to carry around.
 
 \subsubsection{Fees Regarding Luggage by Flight}
 \label{sec:overweight}
 The increased weight means the suitcases might exceed the limit for weight and therefore trigger a fee for overweight luggage.
-It seems people often pack their luggage more compact instead of taking extra suitcases with them on vacation. In general people take a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
+It seems people often pack their luggage in a more compact way instead of taking extra suitcases with them on vacation. In general, people bring a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
 
 \begin{table}[H]
 \begin{tabular}{| l | r | r | r | r |}
@@ -37,30 +37,30 @@ US Airways & \$120,925,000  & \$134,752,000  &  \$128,761,000& \$384,439,000  \\
 Continental & \$76,304,000   & \$91,332,000 & \$94,301,000 & \$261,937,000 \\ \hline
 United & \$66,245,000 & \$71,111,000 & \$74,758,000  & \$212,114,000   \\ \hline
 \end{tabular}
-\caption{This table contains the top 5 of the companies that have collected the most fees regarding luggage in 2011. The numbers are from \citep{airstat}. The fourth quarter is not yet released and is therefore not shown. This statistic is only regarding U.S. airlines.}
+\caption{This table contains the top 5 of the companies which have collected the most fees regarding luggage in 2011. The numbers are from \citep{airstat}. The fourth quarter is not yet released and is therefore not shown. This statistic is only regarding U.S. airlines.}
 \label{tab:airlinefees}
 \end{table}
 
-An American website for statistics, \citep{airstat}, shows the amount of fees given regarding luggage that have been registered at the U.S. airlines. Table \ref{tab:airlinefees} is a segment of the statistic table found at \citep{airstat}. Through this it is possible to see that there are people that exceed the set of limits given by the airlines. A note regarding this source is that the size of the fee is a combination of the different rules and the related fees. Therefore the statistics do not give an accurate image of the problem regarding weight limit, but a more general image of the problems with luggage exceeding the given limits.
+An American website for statistics, \citep{airstat}, shows the amount of fees given regarding luggage which have been registered at the U.S. airlines. Table \ref{tab:airlinefees} is a segment of the statistic table found at \citep{airstat}. Through this it is possible to see that there are people who exceed the set of limits given by the airlines. A note regarding this source is that the size of the fee is a combination of the different rules and the related fees. Therefore the statistics do not give an accurate image of the problem regarding weight limit, but a more general image of the problems with luggage exceeding the given limits.
 
 \subsubsection{Different Transport Methods}
-The problem with packing luggage is mostly the same if it is by train, car, or flights. Though flights are the one transportation where it plays the biggest role for the traveler because it has the biggest economical consequences and therefore are the rules more strict. With train and car it is more or less up to the traveler how heavy the luggage is allowed to be. There are restrictions for how big the suitcases are allowed to be in the train. For some trains the limits are 100 x 60 x 30 cm \citep{rulestrain}.
+The problem with packing luggage is mostly the same if it is by train, car, or flights. Though flights are the one transportation where it plays the biggest role for the traveler because it has the biggest economical consequences and therefore the rules are more strict. With train and car it is more or less up to the traveler how heavy the luggage is to be. There are restrictions for how big the suitcases are allowed to be on the train. For some trains the limits are 100 x 60 x 30 cm \citep{rulestrain}.
 
-When going on vacation, and using the car as transportation, the size of the car sets the limit in size of the luggage, since the passenger cannot pay to get more luggage with them than fits into their car. The weight might also have a influence on the amount of luggage there can be in the car, because the car might not be able to drive well if the certain car is over the excess weight, since there are cars that can lift more than others. % When packing a car it is important to place the heaviest of the luggage just behind the back seats and evenly spread to the sides. This is to prevent the luggage from gathering momentum during an emergency brake and maybe go through the back seats. Furthermore it is to prevent over steering and thereby evade potential traffic accidents\citep{Farlig_bagage}.
+When going on vacation, and using the car as transportation, the size of the car sets the limit in size of the luggage, since the passenger cannot pay to get more luggage with them than fits into their car. The weight might also have a influence on the amount of luggage there can be in the car, because the car might not be able to drive well if the certain car is over the excess weight, since there are cars which can lift more than others. % When packing a car it is important to place the heaviest of the luggage just behind the back seats and evenly spread to the sides. This is to prevent the luggage from gathering momentum during an emergency brake and maybe go through the back seats. Furthermore it is to prevent over steering and thereby evade potential traffic accidents\citep{Farlig_bagage}.
 
 \subsubsection{Souvenirs on Vacation}
-There can be many good experiences and memories on a vacations. The memories tend to be bound to photos, items and souvenirs which makes it easier to remember. Souvenirs can have a certain value and can be used to fill the home with memories about the past experiences.
+There can be many good experiences and memories on a vacations. The memories tend to be bound to photos, items and souvenirs which make it easier to remember. Souvenirs can have a certain value and can be used to fill the home with memories about the past experiences.
 With this in mind, it is important to make room for possible souvenirs or other things that simply had to be bought while away.
 
 These souvenirs can be a problem to bring home. As earlier mentioned the weight and size of the luggage is a problem before the departure, therefore it will normally also be a problem on the trip home.
 This means that if a family packs just to the limits and then buy things and souvenirs on their vacation they will get into trouble when packing the luggage for the trip home.
 
 \subsubsection{Packing as a Family}
-When traveling as a family it is an option to pack clothing, accessories and other relevant items in a more effective way. This is done by using all the suitcases in the most effective way and thereby not take the ownership of the suitcases into consideration. This method means that the suitcases will not be sectioned by ownership but the packed items will be packed into different suitcases despite the ownership of the item to achieve the most effective way of packing. Original suitcases tends to be packed so the suitcases are sectioned by the owner of the items so it is easier to find the desired item. This method is mostly used because it makes it much easier to know were to find the desired item. When this method of packing is used, it will be more effectively packed, but it have to be kept in mind that the weight should be distributed evenly, so none of the suitcases are too heavily packed compared to the others.
+When traveling as a family it is an option to pack clothing, accessories and other relevant items in a more effective way. This is done by using all the suitcases in the most effective way and thereby not take the ownership of the suitcases into consideration. This method means that the suitcases will not be sectioned by ownership but the packed items will be packed into different suitcases despite the ownership of the item to achieve the most effective way of packing. Original suitcases tend to be packed so the suitcases are sectioned by the owner of the items so it is easier to find the desired item. This method is mostly used because it makes it much easier to know where to find the desired item. When this method of packing is used, it will be more effectively packed, but it has to be kept in mind that the weight should be distributed evenly, so none of the suitcases are too heavily packed compared to the others.
 
 \subsubsection{Summing Up}
-So the problem is packing the luggage in the most effective way and spreading the weight in the available suitcases, without violating the different rules or limits to size and weight. It can also be a problem to pack the suitcases to the trip home due to the bought souvenirs or other items. The reason to the problem could be that people find it difficult to pack the luggage for a trip and therefore pack more than they actually need on the trip. When traveling as a family, it is more optimal to use all the family's suitcases, to fit all the items. 
+So the problem is packing the luggage in the most effective way and spreading the weight in the available suitcases, without violating the different rules or limits to size and weight. It can also be a problem to pack the suitcases for the trip home due to the bought souvenirs or other items. The reason for the problem could be that people find it difficult to pack the luggage for a trip and therefore pack more than they actually need on the trip. When traveling as a family, it is more optimal to use all the family's suitcases, to fit all the items. 
 
 The consequences of luggage exceeding the weight limits at the airlines are that the traveler will have to pay a fee for the extra weight.
-Train passengers that exceed the size limits might not be allowed to have their luggage with them if the dimensions of the suitcases are to big.
+Train passengers who exceed the size limits might not be allowed to have their luggage with them if the dimensions of the suitcases are to big.
 %There is not a specific program on the marked that specifically helps packing luggage for a trip, but there exist at least one program that can pack a container\citep{solvingmaze}. This method of packing a container can be compared to packing luggage. A other solution is a smart-phone application that help with packing a suitcases by making a check-list over what to have with you on the trip \citep{packingpro}, see section \ref{sec:Solution}.
