--- a/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
@@ -2,15 +2,17 @@
 \label{sec:ColorGiver}
 This function gives each item a color and ensures that items that lie next to each other do not get the same color. The function has four steps to complete before its task is finished.
 
-The first step is to add certain coordinates of each item into a list. This is done for all items that are to be packed. First, a "for" loop runs through the items that are to be packed. Inside the first "for" loop there are three "for" loops that run through the x, y and z coordinates starting at the saved coordinate for the current item. The loops then runs until the limits are reached for the three "for" loops which are the height, width and length. These loops can be seen on listing \ref{lst:ColorGiverListing1}. At the end of the three "for" loops there are an "if" statement which controls that it is only coordinates(x, y, and z) on the outside of an item that are added. The "if" statement works by checking if one of the coordinates (x, y or z) is either at the respective start point(saved point x, y, or z) or at the maximum limit (height, weight or length) and then only allow coordinates where this is fulfilled and thereby achieve coordinates on the outside of the item.
-When the "if" statement is fulfilled, the three integers x, y and z are added to their representative lists that are stored in a temporary variable of type cbox. Cbox is a class that has 3 lists in it. These three lists outline the sides of their respective object. The temporary variable are then stored in the "BoxColor" list which is the final list. Due to the size of the "if" sentences, it is not displayed in the report. See the program on the CD, see Appendix \ref{chap:CD}.
-\kode{The four "for" loops which controls the item and the (x; y; z) value that make the point for the items. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing1}{ColorGiverListing1.txt}
+The first step is to add certain coordinates of each item into a list. This is done for all items which are to be packed. First, a "for" loop runs through the items that are to be packed. Inside the first "for" loop there are three "for" loops which run through the x, y and z coordinates starting at the saved coordinate for the current item. The loops then run until the limits are reached for the three "for" loops, which are the height, width and length. These loops can be seen on listing \ref{lst:ColorGiverListing1}. At the end of the three "for" loops there is an "if" statement, which controls that it is only coordinates(x, y, and z) on the outside of an item that are added. The "if" statement works by checking if one of the coordinates (x, y or z) is either at the respective start point(saved point x, y, or z) or at the maximum limit (height, weight or length) and then only allow coordinates where this is fulfilled and thereby achieve coordinates on the outside of the item.
+When the "if" statement is fulfilled, the three integers x, y and z are added to their representative lists that are stored in a temporary variable of type cbox. Cbox is a class which has 3 lists in it. These three lists outline the sides of their respective object. The temporary variable are then stored in the "BoxColor" list which is the final list. Due to the size of the "if" sentences, it is not displayed in the report. See the program on the CD, see Appendix \ref{chap:CD}.
+\kode{The four "for" loops which control the item and the (x; y; z) value that makes the point for the items. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing1}{ColorGiverListing1.txt}
 
-The second step is to check which items are neighbors through two "for" loops. Thereby determining if they are located next to each other. If they are, the item number will be saved in a list that is called "neighbor". This step works by four "for" loops where the first loop keeps track of the current item that is being checked for neighbors. The second loop keeps track of the item that is being checked, and if it is a neighbor to the first one. The last two loops work with the points that are in the item's lists. But it will only run these loops if the items are in the same suitcase (Which can be seen by the "if" statement that are between the first two and the last two "for" loops). If they are next to each other it will save the item's number into a list in the other item. This is done for the other item as well. The 2 loops and setting of an item's neighbor can be seen on listing \ref{lst:ColorGiverListing2}.
+The second step is to check which items are neighbors through two "for" loops. Thereby determining if they are located next to each other. If they are, the item number will be saved in a list that is called "neighbor". This step works by four "for" loops, where the first loop keeps track of the current item that is being checked for neighbors. The second loop keeps track of the item that is being checked, and if it is a neighbor to the first one. The last two loops work with the points that are in the item's lists. But it will only run these loops if the items are in the same suitcase (Which can be seen by the "if" statement that are between the first two and the last two "for" loops). If they are next to each other it will save the number of the item into a list in the other item. This is done for the other item as well. The 2 loops and setting of an the neighbor of the item can be seen on listing \ref{lst:ColorGiverListing2}.
 \kode{The 2 "for" loops and the "if" statement that check if the two items shares any point. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing2}{ColorGiverListing2.txt}
 
-Thereafter the list "neighbor" is gone through to remove all the duplicates of themselves from the list. This works with one "for" loop that keeps track of which items are being worked with and when the loop is done the neighbor list is sorted. Then there is a "while" loop that goes through all the neighbors (items that are next to it) and check if the item itself is in it and remove it. It will also check if the number after the current is the same, if it is the same it will remove one of them. This can be seen in listing \ref{lst:ColorGiverListing3}.
-\kode{"If" statements that check the item after the current item to see if they are identical. If they are remove one of them. This slice of code is taken from the function Colors in frmMain}{ColorGiverListing3}{ColorGiverListing3.txt}
+Thereafter the list "neighbor" is gone through to remove all the duplicates of themselves from the list. This works with one "for" loop which keeps track of which items are being worked with and when the loop is done the neighbor list is sorted. Then there is a "while" loop which goes through all the neighbors (items that are next to it) and checks if the item itself is in it and removes it. It will also check if the number after the current is the same, if it is the same it will remove one of them. This can be seen in listing \ref{lst:ColorGiverListing3}.
+\kode{"If" statements which check the item after the current item to see if they are identical, and if they are, remove one of them. This slice of code is taken from the function Colors in frmMain}{ColorGiverListing3}{ColorGiverListing3.txt}
 
-The last step taken is to go through the item list and give a color to each item. In this part the colors are numbers, where number 0 is the standard color. First there is a "for" loop that sets the current item. Before the current item is given a number based on its neighbors, its value is set to 0. Then there is a "while" loop that goes through all the item's neighbors and check if the color is the same. If they are the same, then the item's color number is increased by 1. This can be seen in listing \ref{lst:ColorGiverListing4}. When the neighbor list is finished, the color is saved in the item, the color number is set to 0 again, and the next item in the list is checked.
+The last step taken is to go through the item list and give a color to each item. In this part the colors are numbers, where number 0 is the standard color. First there is a "for" loop which sets the current item. Before the current item is given a number based on its neighbors, its value is set to 0. Then there is a "while" loop which goes through all the neighbor of the item and check if the color is the same. If they are the same, then the color number of the item is increased by 1. This can be seen in listing \ref{lst:ColorGiverListing4}. When the neighbor list is finished, the color is saved in the item, the color number is set to 0 again, and the next item in the list is checked.
 \kode{"If" statement that checks if an item and neighbor have the same color. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing4}{ColorGiverListing4.txt}
+
+which
